Overflow fixes

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 28%;
+  height: 250px;
   h1 {
     /* Not sure if it should just be a h1 tag here... also text size is not responsive */
     z-index: 1;
@@ -28,9 +28,11 @@
 
   visibility: hidden;
   width: auto;
-  height: 130px;
+  height: 60%;
 
   opacity: 0;
+
+  transform: rotate(45deg);
 }
 
 .diamond {
