--- a/app/styles/_landingPage.scss
+++ b/app/styles/_landingPage.scss
@@ -1,6 +1,6 @@
 .landingPage__wrapper-intro {
   height: 100vh;
-  margin-top: 11.2%; // Extra height of crystals in header.
+  margin-top: 100px;  // Extra height of crystals in header.
   padding: 0 $Baseline;
   &--text {
     font-family: 'Poppins Light';
