--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,11 +22,16 @@ $Baseline: 24px;
   background: #ccc;
 }
 
-html,
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
-  overflow-x: hidden;
-  width: 100vw;
-  height: 100vh;
+  overflow: hidden;
+  overflow-y: auto;
+  width: 100%;
+  height: 100%;
 
   background: #fcffb4;
 
